// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Card Basic 1`] = `
<div
  className="css-1ohc8tn-CardWrapper e1ft0i6y0"
  height="NORMAL"
  width="NORMAL"
>
  <p
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    Hola como estas
  </p>
</div>
`;

exports[`Storyshots Molecules/Card Content 1`] = `
<div
  className="css-1ohc8tn-CardWrapper e1ft0i6y0"
  height="NORMAL"
  width="NORMAL"
>
  <div
    className="css-1keji-CardContent e1ft0i6y2"
  >
    <div
      className="css-144j0q-TitleContainer etn7vk90"
    >
      Hi this is title
    </div>
    <div
      className="css-92onx5-SubtitleContainer etn7vk91"
    >
      Hi this is description
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Cover 1`] = `
<div
  className="css-1ohc8tn-CardWrapper e1ft0i6y0"
  height="NORMAL"
  width="NORMAL"
>
  <div
    className="css-ebfyr-CardCover e1ft0i6y1"
  >
    <img
      src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"
      width="100%"
    />
  </div>
  <div
    className="css-1keji-CardContent e1ft0i6y2"
  >
    <div
      className="css-144j0q-TitleContainer etn7vk90"
    >
      Hi this is title
    </div>
    <div
      className="css-92onx5-SubtitleContainer etn7vk91"
    >
      Hi this is description
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Footer 1`] = `
<div
  className="css-1ohc8tn-CardWrapper e1ft0i6y0"
  height="NORMAL"
  width="NORMAL"
>
  <div
    className="css-ebfyr-CardCover e1ft0i6y1"
  >
    <img
      src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"
      width="100%"
    />
  </div>
  <div
    className="css-1keji-CardContent e1ft0i6y2"
  >
    <div
      className="css-144j0q-TitleContainer etn7vk90"
    >
      Hi this is title
    </div>
    <div
      className="css-92onx5-SubtitleContainer etn7vk91"
    >
      Hi this is description
    </div>
  </div>
  <div
    className="css-ykbte7-CardFooter e1ft0i6y3"
  >
    <button
      className="css-1ru1eiv-ButtonWrapper ekfoxpm0"
      type="submit"
      width="SMALL"
    >
      Text
    </button>
  </div>
</div>
`;
